welcome.lessons.welcome.array.island.Island.scala.error
island:2: error: not found: value nums
	var max = nums(0)
                  ^island:4: error: not found: value nums
		if (nums(i)>max) {max=nums(i)}
                    ^island:4: error: not found: value nums
		if (nums(i)>max) {max=nums(i)}
                                      ^