welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
	var max = nums(0)
	for(i<-1 to num.length-1) {
		if (nums(i)>max) {max=nums(i)}
	} //trouve la valeure maximum

	var nb = 0 //réponse
	
	for (k<-0 to max) {
		for (i<-0 to num.length-1) {
			if (num(i)==k && num(i+1)!=num(i)) {nb=nb+1}
		}
		if (num(num.length-1)==k && num(num.length-2)!=num(num.length-1)) {nb=nb+1}
	}
	return nb
}
